069_eks_multus_cni/multus_predictable_network_interface_names_disabled.yaml
Transform: AWS::LanguageExtensions
Parameters:
  InboundFromAnywhere:
    Type: String
    Default: "False"
    AllowedValues: ["True", "False"]
    Description: SecurityGroup Inbound Rule (Source 0.0.0.0/0)
  KubernetesVersion:
    Description: EKS Cluster Kubernetes Version (1.XX)
    Type: String
    Default: "1.35"
    AllowedValues: ["1.31", "1.32", "1.33", "1.34", "1.35"]
  AmiId:
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Default: /aws/service/ami-amazon-linux-latest/al2023-ami-kernel-6.1-x86_64
Conditions:
  SecurityGroupInboundFromAnywhere: !Equals [!Ref InboundFromAnywhere, "True"]

Mappings:
  AzMapping: 
    a:
      PublicSubnetCidr: 10.0.0.0/24
      PrivateSubnetCidr: 10.0.1.0/24
    b: 
      PublicSubnetCidr: 10.0.2.0/24
      PrivateSubnetCidr: 10.0.3.0/24
    c: 
      PublicSubnetCidr: 10.0.4.0/24
      PrivateSubnetCidr: 10.0.5.0/24

Resources:
  KeyPair:
    Type: AWS::EC2::KeyPair
    Properties:
      KeyName: !Sub
        - key-${Id}
        - Id: !Select [3, !Split ['-', !Select [2, !Split ['/', !Ref AWS::StackId]]]]
  
  Vpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: True
      EnableDnsHostnames: True
      Tags:
        - Key: Name
          Value: vpc

  # PublicSubnets
  Fn::ForEach::PublicSubnets:
    - Az
    - [a, c]
    - PublicSubnet${Az}:
        Type: AWS::EC2::Subnet
        Properties:
          AvailabilityZone: !Sub ${AWS::Region}${Az}
          CidrBlock: !FindInMap [AzMapping, !Ref Az, PublicSubnetCidr]
          MapPublicIpOnLaunch: true
          Tags:
            - Key: Name
              Value: !Sub public-subnet-${Az}
          VpcId: !Ref Vpc
      PublicSubnet${Az}RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
          RouteTableId: !Ref PublicSubnetRouteTable
          SubnetId: 
            Ref: !Sub PublicSubnet${Az}
  PublicSubnetRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value: public-rt
      VpcId: !Ref Vpc
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: igw
  VpcInternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref Vpc
  PublicSubnetRoute:
    Type: AWS::EC2::Route
    DependsOn:
      - VpcInternetGatewayAttachment
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
      RouteTableId: !Ref PublicSubnetRouteTable
  
  # PrivateSubnets
  Fn::ForEach::PrivateSubnets:
    - Az
    - [a, c]
    - PrivateSubnet${Az}:
        Type: AWS::EC2::Subnet
        Properties:
          VpcId: !Ref Vpc
          CidrBlock: !FindInMap [AzMapping, !Ref Az, PrivateSubnetCidr]
          AvailabilityZone: !Sub ${AWS::Region}${Az}
          Tags:
            - Key: Name
              Value: !Sub private-subnet-${Az}
      NatgatewayElasticIp${Az}:
        Type: AWS::EC2::EIP
      PrivateSubnet${Az}RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
          RouteTableId: !Ref PrivateSubnetRouteTable
          SubnetId:
            Ref: !Sub PrivateSubnet${Az}
  PrivateSubnetRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref Vpc
      Tags:
        - Key: Name
          Value: !Sub private-rt
  PrivateSubnetRoute:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway
      RouteTableId: !Ref PrivateSubnetRouteTable
  NatGateway:
    Type: AWS::EC2::NatGateway
    DependsOn:
      - VpcInternetGatewayAttachment
    Properties:
      VpcId: !Ref Vpc
      AvailabilityMode: regional
      AvailabilityZoneAddresses:
        - AvailabilityZone: !Sub ${AWS::Region}a
          AllocationIds: 
            - !GetAtt NatgatewayElasticIpa.AllocationId
        - AvailabilityZone: !Sub ${AWS::Region}c
          AllocationIds: 
            - !GetAtt NatgatewayElasticIpc.AllocationId
      Tags: 
        - Key : Name
          Value : !Sub regional-natgw
  
  VsCodeEc2:
    Type: AWS::EC2::Instance
    DependsOn:
      - CoreNodeGroup
    CreationPolicy:
      ResourceSignal:
        Count: '1'                
        Timeout: PT15M
    Properties:
      ImageId: !Ref AmiId
      InstanceType: t3.medium
      KeyName: !Ref KeyPair
      NetworkInterfaces: 
        - AssociatePublicIpAddress: True
          DeviceIndex: 0
          SubnetId: !Ref PublicSubneta
          GroupSet: 
            - !GetAtt EksCluster.ClusterSecurityGroupId
            - !Ref VsCodeEc2SecurityGroup
      Tags: 
        - Key: Name
          Value: vscode
      IamInstanceProfile: !Ref VsCodeEc2InstanceProfile
      UserData: 
        # sudo tail -f /var/log/cloud-init-output.log
        Fn::Base64: !Sub 
          - |
            #!/bin/bash
            dnf update -yq
            dnf install -yq git
            dnf groupinstall -yq "Development Tools"

            export VSC_VERSION=$(curl -s https://api.github.com/repos/coder/code-server/releases/latest | jq -r '.tag_name | ltrimstr("v")')
            wget https://github.com/coder/code-server/releases/download/v$VSC_VERSION/code-server-$VSC_VERSION-linux-amd64.tar.gz
            tar -xzf code-server-$VSC_VERSION-linux-amd64.tar.gz
            mv code-server-$VSC_VERSION-linux-amd64 /usr/local/lib/code-server
            ln -s /usr/local/lib/code-server/bin/code-server /usr/local/bin/code-server
            mkdir -p /home/ec2-user/.config/code-server
            cat <<EOF > /home/ec2-user/.config/code-server/config.yaml
            bind-addr: 0.0.0.0:8000
            auth: none
            cert: false
            EOF
            chown -R ec2-user:ec2-user /home/ec2-user/.config
            cat << EOF > /etc/systemd/system/code-server.service
            [Unit]
            Description=VS Code Server
            After=network.target
            [Service]
            Type=simple
            User=ec2-user
            ExecStart=/usr/local/bin/code-server --config /home/ec2-user/.config/code-server/config.yaml /home/ec2-user
            Restart=always
            [Install]
            WantedBy=multi-user.target
            EOF
            systemctl daemon-reload
            systemctl enable code-server
            systemctl start code-server

            sudo -Eu ec2-user bash << 'EOF'
            cd /home/ec2-user
            mkdir -p /home/ec2-user/bin
            curl -O https://s3.us-west-2.amazonaws.com/amazon-eks/1.33.3/2025-08-03/bin/linux/amd64/kubectl
            chmod +x kubectl
            mv kubectl /home/ec2-user/bin/kubectl
            export PATH=/home/ec2-user/bin:$PATH
            echo "export PATH=/home/ec2-user/bin:$PATH" >> ~/.bashrc
            echo "alias k=kubectl" >> ~/.bashrc
            echo "complete -o default -F __start_kubectl k" >> ~/.bashrc
            echo "source <(kubectl completion bash)" >> ~/.bashrc
            exec bash

            curl --silent --location "https://github.com/weaveworks/eksctl/releases/latest/download/eksctl_$(uname -s)_amd64.tar.gz" | tar xz -C /tmp
            sudo mv /tmp/eksctl /usr/local/bin

            curl -fsSL -o /home/ec2-user/get_helm.sh https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-4
            chmod 700 /home/ec2-user/get_helm.sh
            /home/ec2-user/get_helm.sh
            rm /home/ec2-user/get_helm.sh

            aws eks update-kubeconfig --region ${AWS::Region} --name ${EksCluster}
            helm repo add eks https://aws.github.io/eks-charts
            helm repo update eks
            helm install aws-load-balancer-controller eks/aws-load-balancer-controller -n kube-system --wait \
            --set clusterName=${EksCluster} \
            --set serviceAccount.name=aws-load-balancer-controller \
            --set region=${AWS::Region} \
            --set vpcId=${Vpc}
            sleep 60

            echo "# VPC CNI - Multi Homed Pods" > /home/ec2-user/README.md

            # https://github.com/k8snetworkplumbingwg/multus-cni
            kubectl apply -f https://raw.githubusercontent.com/k8snetworkplumbingwg/multus-cni/master/deployments/multus-daemonset-thick.yml
            # https://docs.aws.amazon.com/vpc/latest/userguide/subnet-cidr-reservation.html
            aws ec2 create-subnet-cidr-reservation --subnet-id ${PrivateSubneta} --reservation-type prefix --cidr ${Cidr3}
            aws ec2 create-subnet-cidr-reservation --subnet-id ${PrivateSubneta} --reservation-type prefix --cidr ${Cidr4}
            mkdir -p /home/ec2-user/manifests
            echo 'apiVersion: "k8s.cni.cncf.io/v1"
            kind: NetworkAttachmentDefinition
            metadata:
              name: eth1-nad
            spec:
              config: |
                {
                  "cniVersion": "0.3.1",
                  "name": "eth1-nad",
                  "type": "ipvlan",
                  "master": "eth1",
                  "mode": "l3",
                  "ipam": {
                    "type": "host-local",
                    "subnet": "${PrivateSubneta.CidrBlock}",
                    "rangeStart": "${Octeta}.${Octetb}.${Octetc}.128",
                    "rangeEnd": "${Octeta}.${Octetb}.${Octetc}.255",
                    "exclude": [
                      "${Cidr1}",
                      "${Cidr2}"
                    ]
                  }
                }' > /home/ec2-user/manifests/eth1_nad.yaml
            echo 'apiVersion: apps/v1
            kind: Deployment
            metadata:
              name: multi-homed
            spec:
              replicas: 2
              selector:
                matchLabels:
                  app: multi-homed
              template:
                metadata:
                  annotations:
                    k8s.v1.cni.cncf.io/networks: eth1-nad
                  labels:
                    app: multi-homed
                spec:
                  containers:
                    - name: network-multitool
                      # https://github.com/wbitt/Network-MultiTool
                      command: ["/bin/bash", "-c", "trap : TERM INT; sleep infinity & wait"]
                      image: wbitt/network-multitool' > /home/ec2-user/manifests/multi_homed_deployment.yaml
            kubectl apply -f /home/ec2-user/manifests/eth1_nad.yaml
            kubectl apply -f /home/ec2-user/manifests/multi_homed_deployment.yaml

            EOF

            /opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackName} --resource VsCodeEc2 --region ${AWS::Region}
          - Cidr1 : !Select [0, !Cidr [!GetAtt PrivateSubneta.CidrBlock, 4, 6]]
            Cidr2 : !Select [1, !Cidr [!GetAtt PrivateSubneta.CidrBlock, 4, 6]]
            Cidr3 : !Select [2, !Cidr [!GetAtt PrivateSubneta.CidrBlock, 4, 6]]
            Cidr4 : !Select [3, !Cidr [!GetAtt PrivateSubneta.CidrBlock, 4, 6]]
            Octeta: !Select [0, !Split [ ".", !GetAtt PrivateSubneta.CidrBlock]]
            Octetb: !Select [1, !Split [ ".", !GetAtt PrivateSubneta.CidrBlock]]
            Octetc: !Select [2, !Split [ ".", !GetAtt PrivateSubneta.CidrBlock]]
  VsCodeEc2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security Group
      GroupName: vscode-sg
      VpcId: !Ref Vpc
      SecurityGroupIngress:
        !If [SecurityGroupInboundFromAnywhere, [{
          "IpProtocol": "tcp",
          "FromPort": 8000,
          "ToPort": 8000,
          "CidrIp": "0.0.0.0/0"
        }], []]
      Tags:
        - Key: Name
          Value: vscode-sg
  VsCodeEc2IamRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action:
              - sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AdministratorAccess
  VsCodeEc2InstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles: 
        - !Ref VsCodeEc2IamRole

  EksClusterIamRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - eks.amazonaws.com
            Action:
              - sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AmazonEKSClusterPolicy
  
  AwsLoadBalancerControllerRole:
    # https://raw.githubusercontent.com/kubernetes-sigs/aws-load-balancer-controller/refs/heads/main/docs/install/iam_policy.json
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service: pods.eks.amazonaws.com
            Action:
              - sts:AssumeRole
              - sts:TagSession
      Policies:
        - PolicyName: AWSLoadBalancerControllerPolicy
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Action:
                  - iam:CreateServiceLinkedRole
                Resource: "*"
                Condition:
                  StringEquals: 
                    iam:AWSServiceName: elasticloadbalancing.amazonaws.com
              - Effect: Allow
                Action: 
                  - ec2:*
                  - elasticloadbalancing:*
                Resource: "*"
              - Effect: Allow
                Action: 
                  - cognito-idp:DescribeUserPoolClient
                  - acm:ListCertificates
                  - acm:DescribeCertificate
                  - iam:ListServerCertificates
                  - iam:GetServerCertificate
                  - waf-regional:GetWebACL
                  - waf-regional:GetWebACLForResource
                  - waf-regional:AssociateWebACL
                  - waf-regional:DisassociateWebACL
                  - wafv2:GetWebACL
                  - wafv2:GetWebACLForResource
                  - wafv2:AssociateWebACL
                  - wafv2:DisassociateWebACL
                  - shield:GetSubscriptionState
                  - shield:DescribeProtection
                  - shield:CreateProtection
                  - shield:DeleteProtection
                Resource: "*"

  EksCluster:
    Type: AWS::EKS::Cluster
    Properties:
      Version: !Ref KubernetesVersion
      AccessConfig: 
        AuthenticationMode: API_AND_CONFIG_MAP
        BootstrapClusterCreatorAdminPermissions: true
      BootstrapSelfManagedAddons: false
      Logging: 
        ClusterLogging: 
          EnabledTypes: 
            - Type: api
            - Type: audit
            - Type: authenticator
            - Type: controllerManager
            - Type: scheduler
      ResourcesVpcConfig: 
        EndpointPrivateAccess: true
        EndpointPublicAccess: true
        SubnetIds: 
          - !Ref PublicSubneta
          - !Ref PublicSubnetc
          - !Ref PrivateSubneta
          - !Ref PrivateSubnetc
      RoleArn: !GetAtt EksClusterIamRole.Arn
      KubernetesNetworkConfig:
        IpFamily: ipv4
        ServiceIpv4Cidr: 172.20.0.0/16
  VsCodeEc2IamAccessEntry:
    Type: AWS::EKS::AccessEntry
    Properties:
      AccessPolicies: 
        - AccessScope: 
            Type: cluster
          PolicyArn: arn:aws:eks::aws:cluster-access-policy/AmazonEKSClusterAdminPolicy
      ClusterName: !Ref EksCluster
      PrincipalArn: !GetAtt VsCodeEc2IamRole.Arn
      Type: STANDARD
  EksOidcProvider:
    Type: AWS::IAM::OIDCProvider
    Properties:
      Url: !GetAtt EksCluster.OpenIdConnectIssuerUrl
      ClientIdList: 
        - sts.amazonaws.com
  VpcCniAddOn:
    Type: AWS::EKS::Addon
    Properties:
      AddonName: vpc-cni
      ClusterName: !Ref EksCluster
  KubeProxyAddOn:
    Type: AWS::EKS::Addon
    Properties:
      AddonName: kube-proxy
      ClusterName: !Ref EksCluster
  CoreDnsAddOn:
    Type: AWS::EKS::Addon
    Properties:
      AddonName: coredns
      ClusterName: !Ref EksCluster
  PodIdentityAgentAddon:
    Type: AWS::EKS::Addon
    Properties:
      AddonName: eks-pod-identity-agent
      ClusterName: !Ref EksCluster
  AwsLoadBalancerControllerRolePodIdentityAssociation:
    Type: AWS::EKS::PodIdentityAssociation
    Properties:
      ClusterName: !Ref EksCluster
      Namespace: kube-system
      RoleArn: !GetAtt AwsLoadBalancerControllerRole.Arn
      ServiceAccount: aws-load-balancer-controller

  CoreNodeGroup:
    Type: AWS::EKS::Nodegroup
    Properties:
      NodegroupName: al2023-nodegroup
      AmiType: AL2023_x86_64_STANDARD
      InstanceTypes:
        # https://github.com/aws/amazon-vpc-resource-controller-k8s/blob/master/pkg/aws/vpc/limits.go#L18529-L18543
        - t3.xlarge	
      CapacityType: ON_DEMAND
      ClusterName: !Ref EksCluster
      ForceUpdateEnabled: true
      NodeRole: !GetAtt EksNodeIamRole.Arn
      Labels: 
        nodegroup: al2023
      ScalingConfig: 
        DesiredSize: 1
        MaxSize: 3
        MinSize: 1
      Subnets: 
        - !Ref PrivateSubneta
        # - !Ref PrivateSubnetc
      LaunchTemplate:
        Id: !Ref CoreLaunchTemplate
  CoreLaunchTemplate:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateName: al2023-nodegroup-launchtemplate
      LaunchTemplateData: 
        KeyName: !Ref KeyPair
        SecurityGroupIds: 
          - !GetAtt EksCluster.ClusterSecurityGroupId
        TagSpecifications: 
          - ResourceType: instance
            Tags: 
              - Key: Name
                Value: al2023-node
        UserData:
          Fn::Base64:
            !Sub |
              MIME-Version: 1.0
              Content-Type: multipart/mixed; boundary="==BOUNDARY=="

              --==BOUNDARY==
              Content-Type: text/x-shellscript; charset="us-ascii"

              #!/bin/bash
              set -o xtrace

              subnetListAZ1="${PrivateSubneta} ${PrivateSubneta} ${PrivateSubneta}"
              sgListAZ1="${EksCluster.ClusterSecurityGroupId} ${EksCluster.ClusterSecurityGroupId} ${EksCluster.ClusterSecurityGroupId}"

              TOKEN=`curl -X PUT "http://169.254.169.254/latest/api/token" -H "X-aws-ec2-metadata-token-ttl-seconds: 21600"`
              INSTANCE_ID="`curl -H "X-aws-ec2-metadata-token: $TOKEN" -s http://169.254.169.254/latest/meta-data/instance-id`"
              REGION=`curl -H "X-aws-ec2-metadata-token: $TOKEN" -s http://169.254.169.254/latest/dynamic/instance-identity/document | jq .region -r`
              AZ="`curl -H "X-aws-ec2-metadata-token: $TOKEN" -s http://169.254.169.254/latest/dynamic/instance-identity/document | jq -r .availabilityZone`"

              createAttachEni () {
              subnetId=$1
              sgId=$2
              region=$3

              subnetipv6Cidr=`aws ec2 describe-subnets --region $region --subnet-ids $subnetId --query "Subnets[*].Ipv6CidrBlockAssociationSet[*].Ipv6CidrBlock" --output text`
              if [ -n "$subnetipv6Cidr" ]; then
                eni=$(aws ec2 create-network-interface --region $region --subnet-id $subnetId --description "eth$((n+1))" --groups $sgId --ipv6-address-count 1 \
                --tag-specifications "ResourceType="network-interface",Tags=[{Key="node.k8s.amazonaws.com/no_manage",Value="true"}]" | jq -r '.NetworkInterface.NetworkInterfaceId, .NetworkInterface.PrivateIpAddresses[0].PrivateIpAddress')
              else
                eni=$(aws ec2 create-network-interface --region $region --subnet-id $subnetId --description "eth$((n+1))" --groups $sgId \
                --tag-specifications "ResourceType="network-interface",Tags=[{Key="node.k8s.amazonaws.com/no_manage",Value="true"}]" | jq -r '.NetworkInterface.NetworkInterfaceId, .NetworkInterface.PrivateIpAddresses[0].PrivateIpAddress')
              fi

              eniId=`echo $eni | cut -d' ' -f 1`
              attachmentId=$(aws ec2 attach-network-interface --region $region --network-interface-id $eniId --instance-id $INSTANCE_ID --device-index $((n+2)) | jq -r '.AttachmentId')
              aws ec2 modify-network-interface-attribute --region $region --network-interface-id $eniId --no-source-dest-check
              aws ec2 modify-network-interface-attribute --region $region --attachment "AttachmentId"="$attachmentId","DeleteOnTermination"="True" --network-interface-id $eniId
              }

              n=0
              for subnet in $subnetListAZ1; do
              sg=$(echo $sgListAZ1 | cut -d' ' -f$((n+1)))
              createAttachEni "$subnet" "$sg" "$REGION"
              n=$((n+1))
              done

              echo "net.ipv4.conf.default.rp_filter = 0" | tee -a /etc/sysctl.conf
              echo "net.ipv4.conf.all.rp_filter = 0" | tee -a /etc/sysctl.conf
              sysctl -p
              sed -i "s/^GRUB_CMDLINE_LINUX_DEFAULT=\"/&net.ifnames=0 biosdevname=0 /" /etc/default/grub
              grub2-mkconfig -o /boot/grub2/grub.cfg

              rm -f /etc/eks/nodeadm/udev-net-manager/$INSTANCE_ID/ens*
              ENI_COUNT=$(echo $subnetListAZ1 | wc -w)
              for ((i = 0; i < ENI_COUNT; i++)); do
                echo "cni" > "/etc/eks/nodeadm/udev-net-manager/$INSTANCE_ID/eth$((i + 1))"
              done

              reboot

              --==BOUNDARY==--
  EksNodeIamRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action:
              - sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AmazonEKSWorkerNodePolicy
        - arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryReadOnly
        - arn:aws:iam::aws:policy/AmazonEKS_CNI_Policy
        - arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore

Outputs:
  VsCode:
    Value: !Sub http://${VsCodeEc2.PublicIp}:8000
    Description: Public IP Address of the VS Code
